--- a/.github/workflows/uploadJarToAzureBlob.yml
+++ b/.github/workflows/uploadJarToAzureBlob.yml
@@ -32,4 +32,4 @@ jobs:
       with:
         azcliversion: 2.33.0
         inlineScript: |
-          az storage blob upload --account-name ${{ secrets.AZURE_STORAGE_ACCOUNT }} --account-key ${{ secrets.AZURE_STORAGE_ACCESS_KEY }} --container-name your-container-name --type block --name your-jar-filename.jar --type block --content ./target/your-jar-filename.jar
+          az storage blob upload --account-name ${{ secrets.AZURE_STORAGE_ACCOUNT }} --account-key ${{ secrets.AZURE_STORAGE_ACCESS_KEY }} --container-name az204container --type block --name azureapps-0.0.1-SNAPSHOT.jar --type block --content ./target/azureapps-0.0.1-SNAPSHOT.jar
