--- a/.github/workflows/uploadJarToAzureBlob.yml
+++ b/.github/workflows/uploadJarToAzureBlob.yml
@@ -1,4 +1,4 @@
-name: Upload JAR to Azure Blob Storage
+retname: Upload JAR to Azure Blob Storage
 
 on:
   push:
@@ -37,4 +37,4 @@ jobs:
       with:
         azcliversion: 2.33.0
         inlineScript: |
-          az storage blob upload --account-name ${{ azure.AZURE_STORAGE_ACCOUNT }} --account-key ${{ azure.AZURE_STORAGE_ACCESS_KEY }} --container-name az204container --type block --name ${{ steps.append_datetime.outputs.filename }} --type block --source ./target/azureapps-0.0.1-SNAPSHOT.jar
+          az storage blob upload --account-name ${{ secret.AZURE_STORAGE_ACCOUNT }} --account-key ${{ secret.AZURE_STORAGE_ACCESS_KEY }} --container-name az204container --type block --name ${{ steps.append_datetime.outputs.filename }} --type block --source ./target/azureapps-0.0.1-SNAPSHOT.jar
