--- a/.github/workflows/uploadJarToAzureBlob.yml
+++ b/.github/workflows/uploadJarToAzureBlob.yml
@@ -41,3 +41,15 @@ jobs:
         azcliversion: 2.33.0
         inlineScript: |
           az storage blob upload --account-name "${{ secrets.AZURE_STORAGE_ACCOUNT }}" --account-key "${{ secrets.AZURE_STORAGE_ACCESS_KEY }}" --container-name az204container --type block --name ${{ steps.append_datetime.outputs.filename }} --type block --file ./target/azureapps-0.0.1-SNAPSHOT.jar --content-type "application/java-archive"
+
+    - name: Copy JAR to Azure VM
+      uses: appleboy/scp-action@master
+      with:
+        # Replace the following variables with the actual values for your Azure VM
+        host: ${{ secrets.AZURE_VM_SSH_HOST }}  # Replace with the IP address or hostname of your Azure VM
+        username: ${{ secrets.AZURE_VM_SSH_USERNAME }}  # Replace with the username of your Azure VM
+        key: ${{ secrets.AZURE_VM_SSH_PRIVATE_KEY }}  # Replace with the private key for SSH authentication
+        port: ${{ secrets.AZURE_VM_SSH_PORT }}  # Replace with the SSH port of your Azure VM
+        source: ./target/azureapps-0.0.1-SNAPSHOT.jar  # Path to the JAR file to be copied
+        target: /home/java_apps/  # Destination path on the Azure VM
+        
