--- a/.github/workflows/uploadJarToAzureBlob.yml
+++ b/.github/workflows/uploadJarToAzureBlob.yml
@@ -51,5 +51,6 @@ jobs:
         key: ${{ secrets.AZURE_VM_SSH_PRIVATE_KEY }}  # Replace with the private key for SSH authentication
         port: ${{ secrets.AZURE_VM_SSH_PORT }}  # Replace with the SSH port of your Azure VM
         source: ./target/azureapps-0.0.1-SNAPSHOT.jar  # Path to the JAR file to be copied
-        target: /home/java_apps/  # Destination path on the Azure VM
+        target: /home/java_apps/"${{ secrets.AZURE_STORAGE_ACCOUNT }}"  # Destination path on the Azure VM
+        debug: true
         
