--- a/.github/workflows/uploadJarToAzureBlob.yml
+++ b/.github/workflows/uploadJarToAzureBlob.yml
@@ -54,4 +54,18 @@ jobs:
         source: ./target/azureapps-0.0.1-SNAPSHOT.jar  # Path to the JAR file to be copied
         target: /home/javaapps/actions/${{ steps.append_datetime.outputs.filename }}  # Destination path on the Azure VM
         debug: true
+
+    - name: Stop Current Process on Port 8080
+      run: |
+        # Find the process ID (PID) using port 8080 and stop the process
+        pid=$(lsof -ti :8080)
+        if [ -n "$pid" ]; then
+          echo "Stopping process on port 8080 (PID: $pid)"
+          kill -9 "$pid"
+        else
+          echo "No process found on port 8080"
+        fi
+
+    - name: Run JAR File
+      run: java -jar /home/javaapps/actions/${{ steps.append_datetime.outputs.filename }}/target/azureapps-0.0.1-SNAPSHOT.jar
         
