--- a/.github/workflows/uploadJarToAzureBlob.yml
+++ b/.github/workflows/uploadJarToAzureBlob.yml
@@ -35,12 +35,12 @@ jobs:
       id: echoing
       run: echo ${{ steps.append_datetime.outputs.filename }}  "ENV SEC echo ${{ env.AZURE_STORAGE_ACCOUNT  }} rep SEC  echo ${{ secrets.AZURE_STORAGE_ACCOUNT  }} "
 
-    - name: Upload JAR to Azure Blob Storage
-      uses: azure/CLI@v1
-      with:
-        azcliversion: 2.33.0
-        inlineScript: |
-          az storage blob upload --account-name "${{ secrets.AZURE_STORAGE_ACCOUNT }}" --account-key "${{ secrets.AZURE_STORAGE_ACCESS_KEY }}" --container-name az204container --type block --name ${{ steps.append_datetime.outputs.filename }} --type block --file ./target/azureapps-0.0.1-SNAPSHOT.jar --content-type "application/java-archive"
+    # - name: Upload JAR to Azure Blob Storage
+    #   uses: azure/CLI@v1
+    #   with:
+    #     azcliversion: 2.33.0
+    #     inlineScript: |
+    #       az storage blob upload --account-name "${{ secrets.AZURE_STORAGE_ACCOUNT }}" --account-key "${{ secrets.AZURE_STORAGE_ACCESS_KEY }}" --container-name az204container --type block --name ${{ steps.append_datetime.outputs.filename }} --type block --file ./target/azureapps-0.0.1-SNAPSHOT.jar --content-type "application/java-archive"
 
     - name: Copy JAR to Azure VM
       uses: appleboy/scp-action@master
@@ -52,20 +52,20 @@ jobs:
         port: ${{ secrets.AZURE_VM_SSH_PORT }}  # Replace with the SSH port of your Azure VM
         script: sudo mkdir -p /home/javaapps/actions
         source: ./target/azureapps-0.0.1-SNAPSHOT.jar  # Path to the JAR file to be copied
-        target: /home/javaapps/actions/${{ steps.append_datetime.outputs.filename }}  # Destination path on the Azure VM
+        target: /home/javaapps/actions/jar-$(date +'%Y%m%d%H%M%S')  # Destination path on the Azure VM
         debug: true
 
-    - name: Stop Current Process on Port 8080
-      run: |
-        # Find the process ID (PID) using port 8080 and stop the process
-        pid=$(lsof -ti :8080)
-        if [ -n "$pid" ]; then
-          echo "Stopping process on port 8080 (PID: $pid)"
-          kill -9 "$pid"
-        else
-          echo "No process found on port 8080"
-        fi
+    # - name: Stop Current Process on Port 8080
+    #   run: |
+    #     # Find the process ID (PID) using port 8080 and stop the process
+    #     pid=$(lsof -ti :8080)
+    #     if [ -n "$pid" ]; then
+    #       echo "Stopping process on port 8080 (PID: $pid)"
+    #       kill -9 "$pid"
+    #     else
+    #       echo "No process found on port 8080"
+    #     fi
 
-    - name: Run JAR File
-      run: java -jar /home/javaapps/actions/${{ steps.append_datetime.outputs.filename }}/target/azureapps-0.0.1-SNAPSHOT.jar
+    # - name: Run JAR File
+    #   run: java -jar /home/javaapps/actions/${{ steps.append_datetime.outputs.filename }}/target/azureapps-0.0.1-SNAPSHOT.jar
         
