--- a/.github/workflows/uploadJarToAzureBlob.yml
+++ b/.github/workflows/uploadJarToAzureBlob.yml
@@ -25,12 +25,13 @@ jobs:
         java-version: '21'
 
     - name: Build and Package with Maven
-      run: mvn clean package
+      run: mvn -q clean package
 
     - name: Append Date and Time to JAR Filename
       id: append_datetime
-      run: echo "::set-output name=filename::azureapps-0.0.1-SNAPSHOT-$(date +'%Y%m%d%H%M%S').jar"
-
+      run: |
+           echo "::set-output name=filename::azureapps-0.0.1-SNAPSHOT-$(date +'%Y%m%d%H%M%S').jar"
+           echo "::set-output name=dirname::SNAPSHOT-$(date +'%Y%m%d%H%M%S')"
     - name: echo_everything
       id: echoing
       run: echo ${{ steps.append_datetime.outputs.filename }}  "ENV SEC echo ${{ env.AZURE_STORAGE_ACCOUNT  }} rep SEC  echo ${{ secrets.AZURE_STORAGE_ACCOUNT  }} "
@@ -52,7 +53,7 @@ jobs:
         port: ${{ secrets.AZURE_VM_SSH_PORT }}  # Replace with the SSH port of your Azure VM
         script: sudo mkdir -p /home/javaapps/actions
         source: ./target/azureapps-0.0.1-SNAPSHOT.jar  # Path to the JAR file to be copied
-        target: /home/javaapps/actions/jar-$(date +'%Y%m%d%H%M%S')  # Destination path on the Azure VM
+        target: /home/javaapps/actions/jars/${{ steps.append_datetime.outputs.dirname }}  # Destination path on the Azure VM
         debug: true
 
     # - name: Stop Current Process on Port 8080
