--- a/.github/workflows/uploadJarToAzureBlob.yml
+++ b/.github/workflows/uploadJarToAzureBlob.yml
@@ -34,7 +34,7 @@ jobs:
            echo "::set-output name=dirname::SNAPSHOT-$(date +'%Y%m%d%H%M%S')"
     - name: echo_everything
       id: echoing
-      run: echo ${{ steps.append_datetime.outputs }}  "ENV SEC echo ${{ env.AZURE_STORAGE_ACCOUNT  }} rep SEC  echo ${{ secrets.AZURE_STORAGE_ACCOUNT  }} "
+      run: echo ${{ steps.append_datetime.outputs.dirname }} 
 
     # - name: Upload JAR to Azure Blob Storage
     #   uses: azure/CLI@v1
