--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.azure.spring</groupId>
+			<artifactId>spring-cloud-azure-starter-storage-blob</artifactId>
+			<version>4.6.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
