--- a/.github/workflows/uploadJarToAzureBlob.yml
+++ b/.github/workflows/uploadJarToAzureBlob.yml
@@ -8,10 +8,17 @@ on:
 jobs:
   upload-jar-and-release-new-version:
     runs-on: ubuntu-latest
+    env:
+     AZURE_STORAGE_CONTAINER_NAME: ${{ secrets.AZURE_STORAGE_CONTAINER_NAME }}
+     AZURE_STORAGE_ACCOUNT_NAME: ${{ secrets.AZURE_STORAGE_ACCOUNT_NAME }}
+     AZURE_STORAGE_ACCOUNT_ENDPOINT: ${{ secrets.AZURE_STORAGE_ACCOUNT_ENDPOINT }}
 
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
+      
+    - name: Use Environment Variable
+      run: echo "My Variable: $AZURE_STORAGE_ACCOUNT_NAME"
 
     - name: Set up Node.js
       uses: actions/setup-node@v4
