--- a/.github/workflows/uploadJarToAzureBlob.yml
+++ b/.github/workflows/uploadJarToAzureBlob.yml
@@ -14,6 +14,11 @@ jobs:
      AZURE_STORAGE_ACCOUNT_ENDPOINT: ${{ secrets.AZURE_STORAGE_ACCOUNT_ENDPOINT }}
 
     steps:
+    - name: Validate ENV
+      run: echo "AZURE_STORAGE_ACCOUNT_NAME =>  $AZURE_STORAGE_ACCOUNT_NAME"
+           echo "AZURE_STORAGE_CONTAINER_NAME =>  $AZURE_STORAGE_CONTAINER_NAME"
+           echo "AZURE_STORAGE_ACCOUNT_ENDPOINT =>  $AZURE_STORAGE_ACCOUNT_ENDPOINT"
+      
     - name: Checkout Repository
       uses: actions/checkout@v2
 
