--- a/.github/workflows/uploadJarToAzureBlob.yml
+++ b/.github/workflows/uploadJarToAzureBlob.yml
@@ -9,9 +9,9 @@ jobs:
   upload-jar-and-release-new-version:
     runs-on: ubuntu-latest
     env:
-     AZURE_STORAGE_CONTAINER_NAME: ${{ secrets.AZURE_STORAGE_CONTAINER_NAME }}
-     AZURE_STORAGE_ACCOUNT_NAME: ${{ secrets.AZURE_STORAGE_ACCOUNT_NAME }}
-     AZURE_STORAGE_ACCOUNT_ENDPOINT: ${{ secrets.AZURE_STORAGE_ACCOUNT_ENDPOINT }}
+     AZURE_STORAGE_CONTAINER_NAME: ${{ env.AZURE_STORAGE_CONTAINER_NAME }}
+     AZURE_STORAGE_ACCOUNT_NAME: ${{ env.AZURE_STORAGE_ACCOUNT_NAME }}
+     AZURE_STORAGE_ACCOUNT_ENDPOINT: ${{ env.AZURE_STORAGE_ACCOUNT_ENDPOINT }}
 
     steps:
     - name: Validate ENV
