--- a/.github/workflows/uploadJarToAzureBlob.yml
+++ b/.github/workflows/uploadJarToAzureBlob.yml
@@ -9,15 +9,15 @@ jobs:
   upload-jar-and-release-new-version:
     runs-on: ubuntu-latest
     env:
-     AZURE_STORAGE_CONTAINER_NAME: ${{ env.AZURE_STORAGE_CONTAINER_NAME }}
-     AZURE_STORAGE_ACCOUNT_NAME: ${{ env.AZURE_STORAGE_ACCOUNT_NAME }}
-     AZURE_STORAGE_ACCOUNT_ENDPOINT: ${{ env.AZURE_STORAGE_ACCOUNT_ENDPOINT }}
+     AZURE_STORAGE_CONTAINER_NAME: ${{ secrets.AZURE_STORAGE_CONTAINER_NAME }}
+     AZURE_STORAGE_ACCOUNT_NAME: ${{ secrets.AZURE_STORAGE_ACCOUNT_NAME }}
+     AZURE_STORAGE_ACCOUNT_ENDPOINT: ${{ secrets.AZURE_STORAGE_ACCOUNT_ENDPOINT }}
 
     steps:
     - name: Validate ENV
-      run: echo "AZURE_STORAGE_ACCOUNT_NAME =>  $AZURE_STORAGE_ACCOUNT_NAME"
-           echo "AZURE_STORAGE_CONTAINER_NAME =>  $AZURE_STORAGE_CONTAINER_NAME"
-           echo "AZURE_STORAGE_ACCOUNT_ENDPOINT =>  $AZURE_STORAGE_ACCOUNT_ENDPOINT"
+      run: echo $AZURE_STORAGE_ACCOUNT_NAME
+           echo $AZURE_STORAGE_CONTAINER_NAME
+           echo $AZURE_STORAGE_ACCOUNT_ENDPOINT
       
     - name: Checkout Repository
       uses: actions/checkout@v2
