--- a/.github/workflows/uploadJarToAzureBlob.yml
+++ b/.github/workflows/uploadJarToAzureBlob.yml
@@ -14,6 +14,9 @@ jobs:
      AZURE_STORAGE_ACCOUNT_ENDPOINT: ${{ secrets.AZURE_STORAGE_ACCOUNT_ENDPOINT }}
 
     steps:
+    - name: Print Environment Variables
+      run: env
+
     - name: Validate ENV
       run: echo $AZURE_STORAGE_ACCOUNT_NAME
            echo $AZURE_STORAGE_CONTAINER_NAME
