--- a/.github/workflows/uploadJarToAzureBlob.yml
+++ b/.github/workflows/uploadJarToAzureBlob.yml
@@ -42,6 +42,8 @@ jobs:
         cd ./frontend &&
         npm install &&
         npm run build
+        mkdir -p ../backend/src/main/resources/static
+        cp -R ./build/* ../backend/src/main/resources/static/
 
     - name: Build and Package with Maven
       run: mvn -q clean package
