--- a/.github/workflows/uploadJarToAzureBlob.yml
+++ b/.github/workflows/uploadJarToAzureBlob.yml
@@ -42,6 +42,10 @@ jobs:
         cd ./frontend &&
         npm install &&
         npm run build
+
+    - name: Clean static folder
+      run: |
+        rmdir /s /q ../backend/src/main/resources/static
         mkdir -p ../backend/src/main/resources/static
         cp -R ./build/* ../backend/src/main/resources/static/
 
