--- a/.github/workflows/uploadJarToAzureBlob.yml
+++ b/.github/workflows/uploadJarToAzureBlob.yml
@@ -37,9 +37,6 @@ jobs:
         distribution: 'adopt'
         java-version: '21'
 
-    - name: Build and Package with Maven
-      run: mvn -q clean package
-
     - name: Build Frontend
       run: |
         cd ./frontend &&
@@ -50,7 +47,10 @@ jobs:
       run: |
         rm -rf ./backend/src/main/resources/static
         mkdir -p ./backend/src/main/resources/static
-        cp -R ./frontend/build/* ../backend/src/main/resources/static/
+        cp -R ./frontend/build/* ./backend/src/main/resources/static/
+
+    - name: Build and Package with Maven
+      run: mvn -q clean package
 
     - name: Append Date and Time to JAR Filename
       id: append_datetime
