--- a/.github/workflows/uploadJarToAzureBlob.yml
+++ b/.github/workflows/uploadJarToAzureBlob.yml
@@ -50,7 +50,7 @@ jobs:
         cp -R ./frontend/build/* ./src/main/resources/static/
 
     - name: Build and Package with Maven
-      run: mvn -q clean package
+      run: mvn -q clean package -Pprod
 
     - name: Append Date and Time to JAR Filename
       id: append_datetime
