--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.cloud.azure.storage.blob.account-name=${AZURE_STORAGE_ACCOUNT_NAME}
 spring.cloud.azure.storage.blob.endpoint=${AZURE_STORAGE_ACCOUNT_ENDPOINT}
 spring.cloud.azure.storage.blob.container-name=${AZURE_STORAGE_CONTAINER_NAME}
+spring.servlet.multipart.max-file-size=5000MB
+spring.servlet.multipart.max-request-size=5000MB
