--- a/.github/workflows/uploadJarToAzureBlob.yml
+++ b/.github/workflows/uploadJarToAzureBlob.yml
@@ -78,9 +78,9 @@ jobs:
           port: ${{ secrets.AZURE_VM_SSH_PORT }}  # Replace with the SSH port of your Azure VM
           script: |
             echo Create directory if it doesn't exist
-            sudo mkdir -p /javaapps/actions/
+            sudo mkdir -p /home/javaapps/actions/
             echo Copy JAR file
-            sudo cp -r ./target/*  /javaapps/actions/
+            sudo cp -r ./target/*  /home/javaapps/actions/
           source: ./target/*  # Path to the JAR file to be copied
-          target: /javaapps/actions/ # Destination path on the Azure VM
+          target: /home/javaapps/actions/ # Destination path on the Azure VM
           debug: true
