--- a/.github/workflows/uploadJarToAzureBlob.yml
+++ b/.github/workflows/uploadJarToAzureBlob.yml
@@ -92,6 +92,5 @@ jobs:
           username: ${{ env.AZURE_VM_SSH_USERNAME }}
           key: ${{ env.AZURE_VM_SSH_PRIVATE_KEY }}
           port: ${{ env.AZURE_VM_SSH_PORT }}
-          script: |
-            cd /home/javaapps/fullstackapp/
-            java -jar "$(basename ${{ steps.store_source.outputs.source }})" > output.log 2>&1 &
+          script: | 
+            cd /home/javaapps/fullstackapp/ && java -jar "$(basename ${{ steps.store_source.outputs.source }})" > output.log 2>&1 &
